# Bubble

./: .gitmodules  README.md
docs/: dummy
engine/: .buckconfig  .gitignore  workspace.josh
engine-sample/: SAMEASPROJECT-ALPHA
engine/app/: Cargo.toml
engine/app/bubble_alloc/: Cargo.toml  README.md
engine/app/bubble_alloc/src/: lib.rs
engine/app/bubble_basin/: Cargo.toml  README.md  rkyv_gen.rs
engine/app/bubble_basin/src/: lib.rs  prototype.rs  prototype_241202.rs
engine/app/bubble_basin/src/buffer/: mod.rs  trait_cast_impl.rs
engine/app/bubble_basin/tests/: 1.rs  buffer_smoke.rs
engine/app/bubble_core/: Cargo.toml  build.rs
engine/app/bubble_core/src/: alloc.rs  api.rs  dll.rs  lib.rs  os.rs  plugin.rs  registry.rs
engine/app/bubble_core/src/api/: api_registry_api.rs  bump_allocator_api.rs  interfaces.rs  mod.rs  plugin_api.rs
engine/app/bubble_core/src/os/: mod.rs  path.rs  thread.rs
engine/app/bubble_core/src/sync/: mod.rs
engine/app/bubble_core/src/utils/: feature_flags_api.rs  hash.rs  mod.rs
engine/app/bubble_fs/: Cargo.toml  README.md
engine/app/bubble_fs/src/: fs_ext.rs  lib.rs  path_ext.rs
engine/app/bubble_log/: Cargo.toml  README.md
engine/app/bubble_log/src/: android_tracing.rs  lib.rs
engine/app/bubble_macros/: Cargo.toml
engine/app/bubble_macros/src/: api.rs  interface.rs  lib.rs  plugin_export.rs  shared.rs
engine/app/bubble_renderer/: Cargo.toml
engine/app/bubble_tasks/: Cargo.toml  LICENSE.txt  README.md
engine/app/bubble_tasks/src/: lib.rs  task_system_api.rs  types.rs
engine/app/bubble_tasks/src/dispatcher/: mod.rs
engine/app/bubble_tasks/src/runtime/: attacher.rs  mod.rs  time.rs
engine/app/bubble_tasks/src/runtime/core/: mod.rs  registry.rs
engine/app/bubble_tests/: Cargo.toml  README.md
engine/app/bubble_tests/src/: lib.rs  utils.rs
engine/app/bubble_tests/tests/: smoke.rs
engine/app/bubble_wand/: Cargo.toml  README.md
engine/app/bubble_wand/src/: lib.rs
engine/app/circ_ds/: Cargo.toml  LICENSE  README.md
engine/app/circ_ds/src/: bonsai_tree.rs  concurrent_map.rs  double_link.rs  lib.rs  list.rs  michael_hash_map.rs  natarajan_mittal_tree.rs  skip_list.rs
engine/app/dyntls/: Cargo.toml
engine/app/dyntls/src/: lib.rs
engine/app/dyntls_host/: Cargo.toml
engine/app/dyntls_host/src/: concurrent_map.rs  lib.rs  list.rs  michael_hash_map.rs  natarajan_mittal_tree.rs
engine/monorepo_examples/: Cargo.toml
engine/monorepo_examples/app/: Cargo.toml
engine/monorepo_examples/app/src/: main.rs
engine/monorepo_examples/dynamic_plugin/: Cargo.toml
engine/monorepo_examples/foundation/: Cargo.toml
engine/monorepo_examples/static_plugin/: Cargo.toml
engine/projectlib0/: BUCK  Cargo.toml
engine/projectlib0/app/src/: main.rs
engine/projectlib0/cxx_bin/: main.cpp
engine/projectlib0/foundation/: Cargo.toml
engine/projectlib0/foundation/src/: lib.rs
engine/projectlib0/static_plugin/: Cargo.toml
engine/projectlib0/static_plugin/src/: lib.rs
engine/tests/: .gitignore  Cargo.toml
engine/tests/application/: Cargo.toml
engine/tests/application/src/: lib.rs  main.rs
engine/tests/hot_reload_plugin/: Cargo.toml
engine/tests/hot_reload_plugin/src/: lib.rs
engine/tests/hot_reload_plugin_types/: Cargo.toml
engine/tests/hot_reload_plugin_types/src/: lib.rs
engine/tests/plugin/: Cargo.toml
engine/tests/plugin/src/: lib.rs
engine/tests/plugin2/: Cargo.toml  src
engine/tests/shared/: Cargo.toml
engine/tests/shared/src/: lib.rs
engine/toolchains/: BUCK
prelude/: dummy
project-alpha/docs/: dummy
project-beta/: workspace.josh
