[workspace]
members = [
    "bubble",
    "bubble_alloc",
    "bubble_core",
    "bubble_log",
    "bubble_macros",
    "bubble_wand",
    "bubble_tasks",
    "dyntls",
    "bubble_renderer",
    "dyntls_host",
    "circ_ds",
]
resolver = "2"

[workspace.dependencies]
bubble-core = { path = "bubble_core", version = "0.1.0" }
bubble-tasks = { path = "bubble_tasks", version = "0.1.0" }
bubble-macros = { path = "bubble_macros", version = "0.1.0" }
bubble-log = { path = "bubble_log", version = "0.1.0" }
