[package]
name = "bubble-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-ffi = { version = "0.5.0", features = ["macros"] }
dlopen2 = "0.7.0"
downcast-rs = "1.2.1"
gettid = "0.1.3"
rustc-hash = "2.0.0"
semver = "1.0.23"
dyntls = { path = "../dyntls" }
aarc = { path = "../../third-party/vendor/aarc"}

[dev-dependencies]
dyntls = { path = "../dyntls", features = ["host"]}

[features]
default = []
custom_alloc_lib = []
host =  ["dyntls/host"]
plugin = ["dyntls/plugin"]
