[package]
name = "bubble-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-ffi = { path = "../../third-party/vendor/async-ffi", features = [
    "macros",
] }
dlopen2 = "0.7.0"
gettid = "0.1.3"
rustc-hash = "2.0.0"
semver = "1.0.23"
dyntls = { path = "../dyntls" }
dyntls-host = { path = "../dyntls_host", optional = true}
circ = { path = "../../third-party/vendor/circ"}
circ-ds = {path = "../circ_ds"}
trait_cast_rs = { path = "../../third-party/vendor/trait_cast_rs/trait_cast_rs" }
fixed-type-id = { version = "0.1.0" }
bubble-macros = { workspace = true }
anyhow = "1.0.90"
thiserror = "1.0.64"
bon = "2.3.0"
tracing = { path = "../../third-party/vendor/tracing/tracing" }
sharded-slab = { path = "../../third-party/vendor/sharded-slab" }
rapidhash = { version = "1.1.0", features = ["rand", "rng"] }

[dev-dependencies]
dyntls-host = { path = "../dyntls_host" }
tempfile = "*"

[build-dependencies]
vergen = { version = "9.0.0", features = ["build", "cargo", "rustc"] }

[features]
default = []
custom_alloc_lib = []
# Note that this feature should not gate codes that affect abi using the same compiler version.
host = ["dep:dyntls-host"]
# erase name of the FixedTypeId, `stringify!(hash(type_path))`. only enable it for binary crate!!!
erase_name = ["fixed-type-id/erase_name"]
