[package]
name = "bubble-tasks"
version = "0.1.0"
description = "Dynamic shared library compatiple runtime for bubble engine"
categories = ["asynchronous"]
keywords = ["async", "runtime"]
authors = ["cupofc0t <cupofc0t@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/c00t/Bubble"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-pc-windows-gnu",
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-ios",
    "aarch64-linux-android",
    "x86_64-unknown-dragonfly",
    "x86_64-unknown-freebsd",
    "x86_64-unknown-illumos",
    "x86_64-unknown-netbsd",
    "x86_64-unknown-openbsd",
]

[dependencies]
async-task = "4.7.1"
cfg-if = { version = "1.0.0"}
compio-buf = {version = "0.5.0", features = ["arrayvec"]}
compio-driver = { version = "0.5.0", default-features = false }
crossbeam-queue = "0.3.11"
futures-util = "0.3.31"
heapless = "0.8.0"
scoped-tls = "1.0.1"
slab = { version = "0.4.9", optional = true }
socket2 = "0.5.7"
bubble-core = { workspace = true }
futures-channel = "0.3.31"
flume = "0.11.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_IO"] }

[target.'cfg(unix)'.dependencies]
os_pipe = "1.1.4"
libc = "0.2.149"

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
core-foundation = "0.10.0"
block2 = "0.5.0"

[target.'cfg(not(any(windows, target_os = "macos")))'.dev-dependencies]
glib = "0.20"

[features]
time = ["dep:slab"]
