[package]
name = "bubble-tasks"
version = "0.1.0"
description = "Dynamic shared library compatiple runtime for bubble engine"
categories = ["asynchronous"]
keywords = ["async", "runtime"]
authors = ["cupofc0t <cupofc0t@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/c00t/Bubble"
edition = "2021"

[dependencies]
compio = { path = "../../third-party/vendor/compio/compio", features = ["dispatcher","time","process","signal"]}
