[package]
name = "bubble-tasks"
version = "0.1.0"
description = "Dynamic shared library compatiple runtime for bubble engine"
categories = ["asynchronous"]
keywords = ["async", "runtime"]
authors = ["cupofc0t <cupofc0t@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/c00t/Bubble"
edition = "2021"

[dependencies]
compio = { path = "../../third-party/vendor/compio/compio", features = [
    "dispatcher",
    "time",
    "process",
    "signal",
] }
async-ffi = { path = "../../third-party/vendor/async-ffi", features = [
    "macros",
] }
bubble-core = { path = "../../app/bubble_core", default-features = false }
futures-channel = "0.3.31"
thingbuf = "0.1.6"
futures-util = "0.3.31"
hwlocality = { version = "1.0.0-alpha.6", features = ["hwloc-2_4_0"] }
backon = { version = "1.3.0", default-features = false }
