[package]
name = "bubble-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
bubble-core = { path = "../bubble_core", default-features = false, features = [
    "host",
    # "erase_name",
] }
bubble-tasks = { path = "../bubble_tasks" }
bubble-log = { path = "../bubble_log", features = [
    "panic-hook",
    # "tracy",
] }
rand = "=0.9.0-alpha.2"
rand_distr = "=0.5.0-alpha.2"

[features]
tracy = ["bubble-log/tracy"]
