[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
bubble-core = {path = "../../app/bubble_core", default-features = false, features = ["host"]}
dlopen2 = "0.7.0"
shared = {workspace = true}
bubble-tasks = {workspace = true}
async-ffi = { version = "0.5.0", features = ["macros"] }
