[package]
name = "hot-reload-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bubble-core = { path = "../../app/bubble_core", default-features = false, features = [
    # "erase_name",
] }
const-random = "0.1.17"
hot_reload_plugin_types = { path = "../hot_reload_plugin_types" }
bon = "3.2.0"
