[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bubble-core = { path = "../../app/bubble_core", default-features = false, features = ["erase_name"]}
shared = { workspace = true }
bubble-tasks = { workspace = true }
# async-ffi = { path = "../../third-party/vendor/async-ffi", features = ["macros"] }
