[package]
name = "plugin2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bubble-core = {path = "../../app/bubble_core", default-features = false, features = ["plugin"]}
shared = {workspace = true}
bubble-tasks = {workspace = true}
async-ffi = { version = "0.5.0", features = ["macros"] }
futures-util = "0.3.31"
